<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".customer.UpdateCustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight=".5"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logoorange"/>

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_customer"
                android:layout_marginTop="25dp"
                android:textSize="30dp"
                android:fontFamily="cursive"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>
        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1.5"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_short">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name"
                    android:id="@+id/edit_cus_name"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_call"
                    android:maxLength="10"

                    android:id="@+id/edit_cus_phonenumber"
                    android:inputType="number"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_email"
                    android:id="@+id/edit_cus_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_address"
                    android:id="@+id/edit_cus_address"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_short"
                android:background="@drawable/cornered_button"
                android:text="@string/update_customer"
                android:textSize="18dp"
                android:id="@+id/updateCustomerbtn"

                android:textColor="@android:color/white" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
