<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".product.UpdateProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight=".3"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal">

            <!--            <ImageView-->
            <!--                android:id="@+id/imgLogin"-->
            <!--                android:layout_width="80dp"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:src="@drawable/logoorange" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pro_update_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:background="@drawable/image_bg"
                    app:civ_border_color="@color/tran"
                    app:civ_border_width="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.398"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/selectImg_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colortrans"
                    android:clickable="true"
                    android:outlineAmbientShadowColor="@color/trans"
                    android:outlineSpotShadowColor="@color/trans"
                    android:scaleType="fitStart"
                    app:borderWidth="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/pro_update_image"
                    app:layout_constraintEnd_toEndOf="@+id/pro_update_image"
                    app:rippleColor="@color/white"
                    app:srcCompat="@drawable/iconcamera" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="cursive"
                android:gravity="center_vertical"
                android:text="@string/update_product"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@android:color/white"
                android:textSize="26dp"
                android:textStyle="bold" />


        </LinearLayout>
        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1.7"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/margin_short">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_update_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_update_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_code"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_update_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_update_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_unit"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_update_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_description"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>



            <Spinner
                android:id="@+id/select_updateCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                />



            <Spinner
                android:id="@+id/select_updateSupplier"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10px"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />



            <Button
                android:id="@+id/updateProductbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_short"
                android:background="@drawable/cornered_button"
                android:text="@string/update_product"
                android:textColor="@android:color/white"
                android:textSize="18dp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>